# Programing-Itmo_2Semestr

./: .gitignore  CMakeLists.txt  DesStr.cpp  DesStr.h  IdentStr.cpp  IdentStr.h  README.md  Stroka.cpp  Stroka.h  desStr.cpp  desStr.h  main.cpp
